sumo/tests/traci/_deprecated/PositionConversion/InvalidPosOnRoad/errors.traci
Warning: Using old TraCI API, please update your client!
Error: Answered with error to command 113: Position on lane must not be negative
